[gd_scene load_steps=37 format=3 uid="uid://cyh0f2r2603yx"]

[ext_resource type="PackedScene" uid="uid://bcusklg12mcbs" path="res://player.tscn" id="1_0sbh4"]
[ext_resource type="Script" uid="uid://c1fk80b7vshyh" path="res://lobby_room.gd" id="1_r1t3v"]
[ext_resource type="Texture2D" uid="uid://cq0jr5miyhygj" path="res://Interiors_free_32x32.png" id="2_don41"]
[ext_resource type="PackedScene" uid="uid://0vdusmt4o4gp" path="res://kitchen_test.tscn" id="2_gmvqh"]
[ext_resource type="Texture2D" uid="uid://dw85m8x0neaib" path="res://101_waffle.png" id="3_n2pq4"]
[ext_resource type="Texture2D" uid="uid://cdhwgvhleuppg" path="res://02_dish_2.png" id="4_1k8nl"]
[ext_resource type="Texture2D" uid="uid://d0kvxqtao1eiu" path="res://102_waffle_dish.png" id="5_ts7a8"]
[ext_resource type="Script" uid="uid://bamjr5qlj4s1q" path="res://customer.gd" id="8_stow4"]
[ext_resource type="Texture2D" uid="uid://bp1yqphahxc7s" path="res://free_character_1-3.png" id="9_nmm6v"]
[ext_resource type="Texture2D" uid="uid://rulah2dqv6c4" path="res://atlas_16x.png" id="10_nmm6v"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5o8ud"]
texture = ExtResource("10_nmm6v")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
32:0/0 = 0
33:0/0 = 0
34:0/0 = 0
35:0/0 = 0
36:0/0 = 0
37:0/0 = 0
38:0/0 = 0
39:0/0 = 0
40:0/0 = 0
41:0/0 = 0
42:0/0 = 0
43:0/0 = 0
44:0/0 = 0
45:0/0 = 0
46:0/0 = 0
47:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
36:1/0 = 0
37:1/0 = 0
38:1/0 = 0
39:1/0 = 0
40:1/0 = 0
41:1/0 = 0
42:1/0 = 0
43:1/0 = 0
44:1/0 = 0
45:1/0 = 0
46:1/0 = 0
47:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
44:2/0 = 0
45:2/0 = 0
46:2/0 = 0
47:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.29505, 8, -6.29505, 8, -8, -8, -8)
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
28:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
44:3/0 = 0
45:3/0 = 0
46:3/0 = 0
47:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
40:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
44:4/0 = 0
45:4/0 = 0
46:4/0 = 0
47:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
39:5/0 = 0
40:5/0 = 0
41:5/0 = 0
42:5/0 = 0
43:5/0 = 0
44:5/0 = 0
45:5/0 = 0
46:5/0 = 0
47:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
40:6/0 = 0
41:6/0 = 0
42:6/0 = 0
43:6/0 = 0
44:6/0 = 0
45:6/0 = 0
46:6/0 = 0
47:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
39:7/0 = 0
40:7/0 = 0
41:7/0 = 0
42:7/0 = 0
43:7/0 = 0
44:7/0 = 0
45:7/0 = 0
46:7/0 = 0
47:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
36:8/0 = 0
37:8/0 = 0
38:8/0 = 0
39:8/0 = 0
40:8/0 = 0
41:8/0 = 0
42:8/0 = 0
43:8/0 = 0
44:8/0 = 0
45:8/0 = 0
46:8/0 = 0
47:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
39:9/0 = 0
40:9/0 = 0
41:9/0 = 0
42:9/0 = 0
43:9/0 = 0
44:9/0 = 0
45:9/0 = 0
46:9/0 = 0
47:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
39:10/0 = 0
40:10/0 = 0
41:10/0 = 0
42:10/0 = 0
43:10/0 = 0
44:10/0 = 0
45:10/0 = 0
46:10/0 = 0
47:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 3.59718, 8, 3.59718, 8, 8, -8, 8)
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
38:11/0 = 0
39:11/0 = 0
40:11/0 = 0
41:11/0 = 0
42:11/0 = 0
43:11/0 = 0
44:11/0 = 0
45:11/0 = 0
46:11/0 = 0
47:11/0 = 0
0:12/0 = 0
1:12/0 = 0
1:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.23746, 3.23746, 3.23746, -8, 8, -8, 8, 8, -8, 8, -8, 3.41732)
2:12/0 = 0
3:12/0 = 0
3:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.0576, -8, -2.51802, 3.95689, 8, 4.13675, 8, 8, -8, 8)
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
34:12/0 = 0
35:12/0 = 0
36:12/0 = 0
37:12/0 = 0
38:12/0 = 0
39:12/0 = 0
40:12/0 = 0
41:12/0 = 0
42:12/0 = 0
43:12/0 = 0
44:12/0 = 0
45:12/0 = 0
46:12/0 = 0
47:12/0 = 0
0:13/0 = 0
0:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.23746, -8, 8, -8, 8, 8, 3.23746, 8)
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
4:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.899294, -8, -8, -2.87774, -8, -2.69788, 8, -8, 8)
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
34:13/0 = 0
35:13/0 = 0
36:13/0 = 0
37:13/0 = 0
38:13/0 = 0
39:13/0 = 0
40:13/0 = 0
41:13/0 = 0
42:13/0 = 0
43:13/0 = 0
44:13/0 = 0
45:13/0 = 0
46:13/0 = 0
47:13/0 = 0
0:14/0 = 0
1:14/0 = 0
1:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 3.0576, 8, 2.69788, 1.97845, -8, 1.79859)
2:14/0 = 0
3:14/0 = 0
3:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 1.61873, -2.69788, 1.61873, -2.87774, 8, -8, 8)
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
33:14/0 = 0
34:14/0 = 0
35:14/0 = 0
36:14/0 = 0
37:14/0 = 0
38:14/0 = 0
39:14/0 = 0
40:14/0 = 0
41:14/0 = 0
42:14/0 = 0
43:14/0 = 0
44:14/0 = 0
45:14/0 = 0
46:14/0 = 0
47:14/0 = 0
0:15/0 = 0
1:15/0 = 0
1:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(2.87774, -8, 8, -8, 8, 2.15831, 3.23746, 1.97845)
2:15/0 = 0
2:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 2.33816, -8, 2.33816)
3:15/0 = 0
3:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -2.87774, -8, -3.23746, 2.33816, -8, 2.33816)
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
33:15/0 = 0
34:15/0 = 0
35:15/0 = 0
36:15/0 = 0
37:15/0 = 0
38:15/0 = 0
39:15/0 = 0
40:15/0 = 0
41:15/0 = 0
42:15/0 = 0
43:15/0 = 0
44:15/0 = 0
45:15/0 = 0
46:15/0 = 0
47:15/0 = 0

[sub_resource type="TileSet" id="TileSet_wjvut"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_5o8ud")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmvqh"]
size = Vector2(14.25, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ts7a8"]
size = Vector2(50, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1t3v"]
size = Vector2(50, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sptfh"]
size = Vector2(50, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhju5"]
size = Vector2(93.3333, 86.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_stow4"]
size = Vector2(70.6667, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmvqh"]
atlas = ExtResource("9_nmm6v")
region = Rect2(64, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o8ud"]
atlas = ExtResource("9_nmm6v")
region = Rect2(64, 20, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjvut"]
atlas = ExtResource("9_nmm6v")
region = Rect2(64, 40, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_cacqj"]
atlas = ExtResource("9_nmm6v")
region = Rect2(64, 60, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwnyt"]
atlas = ExtResource("9_nmm6v")
region = Rect2(48, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_txvyf"]
atlas = ExtResource("9_nmm6v")
region = Rect2(80, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n0qw"]
atlas = ExtResource("9_nmm6v")
region = Rect2(48, 20, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6ujh"]
atlas = ExtResource("9_nmm6v")
region = Rect2(80, 20, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_8glyq"]
atlas = ExtResource("9_nmm6v")
region = Rect2(48, 40, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3js6"]
atlas = ExtResource("9_nmm6v")
region = Rect2(80, 40, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_new1v"]
atlas = ExtResource("9_nmm6v")
region = Rect2(48, 60, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dkvm"]
atlas = ExtResource("9_nmm6v")
region = Rect2(80, 60, 16, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_ku8w7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmvqh")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o8ud")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjvut")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cacqj")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwnyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmvqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txvyf")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n0qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o8ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6ujh")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8glyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjvut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3js6")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_new1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cacqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dkvm")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_np3qw"]
size = Vector2(64, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjvut"]
size = Vector2(16, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nmm6v"]
size = Vector2(22, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cacqj"]
size = Vector2(28, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5o8ud"]
size = Vector2(32.75, 35)

[node name="LobbyRoom" type="Node2D"]
script = ExtResource("1_r1t3v")

[node name="Kitchen Test" parent="." instance=ExtResource("2_gmvqh")]
position = Vector2(-800, -900)
scale = Vector2(4, 4)

[node name="TileMap2" type="TileMap" parent="Kitchen Test"]
position = Vector2(0.25, -0.5)
tile_set = SubResource("TileSet_wjvut")
format = 2
layer_0/name = "Floor"
layer_0/z_index = 3
layer_0/tile_data = PackedInt32Array(196601, 0, 7, 196602, 65536, 7, 196603, 131072, 7, 196604, 196608, 7, 196605, 0, 7, 196606, 65536, 7, 131076, 196608, 7, 131070, 0, 7, 131071, 65536, 7, 262137, 0, 7, 262138, 65536, 7, 262139, 524288, 12, 262140, 196608, 7, 262141, 0, 7, 262142, 65536, 7, 262150, 0, 7, 262151, 65536, 7, 262152, 131072, 7, 262153, 196608, 7, 327673, 0, 7, 327674, 65536, 7, 327675, 524288, 13, 327676, 65536, 7, 327677, 131072, 7, 393209, 0, 7, 393210, 65536, 7, 393211, 131072, 7, 393212, 0, 7, 327685, 131072, 7, 327686, 0, 7, 327687, 1507328, 11, 327688, 131072, 7, 327689, 196608, 7, 393222, 0, 7, 393223, 1507328, 12, 393224, 131072, 7, 393225, 196608, 7, 393219, 65536, 7, 393220, 131072, 7, 393221, 196608, 7, 458746, 65536, 7, 458747, 131072, 7, 458748, 196608, 7, 458745, 0, 7, 524281, 0, 7, 524282, 65536, 7, 524283, 131072, 7, 524284, 196608, 7, 524285, 0, 7, 458755, 131072, 7, 458756, 196608, 7, 458757, 0, 7, 458758, 0, 7, 458759, 65536, 7, 458760, 131072, 7, 458761, 196608, 7, 524288, 65536, 7, 65539, 65536, 7, 65540, 65536, 7, 4, 65536, 7, 65536, 131072, 7, 65537, 196608, 7, 131073, 0, 7, 131074, 65536, 7, 65538, 65536, 7, 131075, 131072, 7, 196611, 131072, 7, 262146, 0, 7, 262145, 196608, 7, 262144, 131072, 7, 262147, 65536, 7, 196612, 196608, 7, 262148, 131072, 7, 262149, 196608, 7, 327684, 65536, 7, 327683, 0, 7, 327682, 196608, 7, 327679, 65536, 7, 458751, 65536, 7, 393216, 131072, 7, 393217, 196608, 7, 393218, 0, 7, 458750, 0, 7, 458749, 196608, 7, 393213, 65536, 7, 393214, 131072, 7, 458754, 65536, 7, 458753, 0, 7, 458752, 196608, 7, 524287, 131072, 7, 327678, 196608, 7, 524286, 65536, 7, 589823, 65536, 7, 393215, 0, 7, 327680, 65536, 7, 327681, 131072, 7, 65534, 0, 7, 1, 196608, 7, 2, 65536, 7, 3, 65536, 7, 65535, 65536, 7, 0, 131072, 7)
layer_1/name = "Wall"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(131069, 131072, 3, 65533, 131072, 2, 131065, 131072, 3, 131066, 131072, 3, 131067, 131072, 3, 131068, 131072, 3, 65529, 131072, 2, 65530, 131072, 2, 65531, 131072, 2, 65532, 131072, 2, 131078, 131072, 2, 131079, 131072, 2, 131080, 131072, 2, 131081, 131072, 2, 196614, 131072, 3, 196615, 131072, 3, 196616, 131072, 3, 196617, 131072, 3, -131070, 131072, 2, -131069, 131072, 2, -131068, 131072, 2, -65534, 131072, 3, -65533, 131072, 3, -65532, 131072, 3, -65537, 131072, 2, -131072, 131072, 2, -131071, 131072, 2, -1, 131072, 3, -65536, 131072, 3, -65535, 131072, 3, 131077, 131072, 2, -65538, 131072, 2, -2, 131072, 3, 327680, 589824, 3, 393216, 589824, 3, 393217, 589824, 3, 196613, 131072, 3)
layer_2/name = "furnitureL"
layer_2/z_index = 3
layer_2/tile_data = PackedInt32Array(327682, 1179648, 4, 327681, 1114112, 4, 262144, 1114112, 3, 327679, 1114112, 3, 327678, 1048576, 3, 393214, 1048576, 4, 458750, 1048576, 4, 458751, 1114112, 4, 393215, 1114112, 4, 327680, 1114112, 4, 262146, 1179648, 3, 393218, 1179648, 4, 393217, 1114112, 4, 393216, 1114112, 4, 524286, 1048576, 5, 524287, 1114112, 5, 458752, 1114112, 5, 458753, 1114112, 5, 458754, 1179648, 5, 262145, 1114112, 3)
layer_3/name = "TextureL"
layer_3/z_index = 4
layer_3/tile_data = PackedInt32Array(-131073, 131072, 11, -196608, 131072, 11, -196607, 131072, 11, -196606, 131072, 11, -196605, 131072, 11, -196604, 131072, 11, -131074, 131072, 11, -196603, 196608, 11, -131067, 262144, 13, -65531, 262144, 13, 5, 262144, 13, 65541, 196608, 12, 65542, 131072, 11, 65543, 131072, 11, 65544, 131072, 11, 65545, 131072, 11, 65546, 196608, 11, 131082, 262144, 13, 196618, 262144, 13, 262154, 262144, 13, 327690, 262144, 13, 393226, 262144, 13, 458762, 262144, 13, 524298, 196608, 15, 524297, 131072, 15, 524296, 131072, 15, 524294, 131072, 15, 524295, 131072, 15, 524293, 131072, 15, 524291, 131072, 15, 524292, 131072, 15, 524290, 131072, 15, 589822, 65536, 14, 524289, 196608, 14, 655359, 131072, 15, 589824, 131072, 15, 589825, 196608, 15, 655358, 65536, 15, 589821, 131072, 15, 589820, 131072, 15, 589819, 131072, 15, 589818, 131072, 15, 589817, 131072, 15, 589816, 65536, 15, 524280, 0, 13, 458744, 0, 13, 393208, 0, 13, 327672, 0, 13, 262136, 0, 13, 196600, 0, 13, 131064, 0, 13, 65528, 0, 13, -8, 0, 12, -7, 131072, 11, -6, 131072, 11, -5, 131072, 11, -4, 131072, 11, -3, 65536, 12, -65539, 0, 13, -131075, 65536, 11, 65533, 196608, 4, 131077, 65536, 4)

[node name="StaticBody2D" type="StaticBody2D" parent="Kitchen Test"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kitchen Test/StaticBody2D"]
z_index = 4
position = Vector2(-71.875, 68.5)
shape = SubResource("RectangleShape2D_gmvqh")

[node name="Player" parent="." instance=ExtResource("1_0sbh4")]
z_index = 4
position = Vector2(-762, -696)

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="Desk1" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(-592, -660)
scale = Vector2(2, 2)
texture = ExtResource("2_don41")
region_enabled = true
region_rect = Rect2(103.79, 1897.9, 50.5171, 42.3434)

[node name="StaticBody2D" type="StaticBody2D" parent="Desk1"]
z_index = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Desk1/StaticBody2D"]
z_index = 4
shape = SubResource("RectangleShape2D_ts7a8")

[node name="Desk2" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(-817, -796.335)
scale = Vector2(2, 2)
texture = ExtResource("2_don41")
region_enabled = true
region_rect = Rect2(103.79, 1897.9, 50.5171, 42.3434)

[node name="StaticBody2D" type="StaticBody2D" parent="Desk2"]
z_index = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Desk2/StaticBody2D"]
z_index = 4
shape = SubResource("RectangleShape2D_r1t3v")

[node name="Desk3" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(-592, -795.93)
scale = Vector2(2, 2)
texture = ExtResource("2_don41")
region_enabled = true
region_rect = Rect2(103.79, 1897.9, 50.5171, 42.3434)

[node name="StaticBody2D" type="StaticBody2D" parent="Desk3"]
z_index = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Desk3/StaticBody2D"]
z_index = 4
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_sptfh")

[node name="Waffle" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(-590.945, -818)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_n2pq4")

[node name="Area2D" type="Area2D" parent="Waffle"]
z_index = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Waffle/Area2D"]
z_index = 4
position = Vector2(-2.03665, 15.3334)
shape = SubResource("RectangleShape2D_vhju5")

[node name="Plate" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(-817.78, -819)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_1k8nl")

[node name="Area2D" type="Area2D" parent="Plate"]
z_index = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plate/Area2D"]
z_index = 4
position = Vector2(0.52002, 15.11)
shape = SubResource("RectangleShape2D_stow4")

[node name="PlateWaffle" type="Sprite2D" parent="."]
visible = false
z_index = 4
position = Vector2(500, 380)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_ts7a8")

[node name="Customer" type="CharacterBody2D" parent="."]
z_index = 4
position = Vector2(-861, -376)
script = ExtResource("8_stow4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Customer"]
z_index = 4
position = Vector2(79.185, 0)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ku8w7")
animation = &"walk_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Customer"]
z_index = 4
position = Vector2(79, 6)
shape = SubResource("RectangleShape2D_np3qw")

[node name="CustomerSpawn" type="Marker2D" parent="."]
z_index = 4
position = Vector2(-861, -376)

[node name="ServingPosition" type="Marker2D" parent="."]
z_index = 4
position = Vector2(-964, -632)

[node name="Fridge" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(-994, -800)
scale = Vector2(4, 4)
texture = ExtResource("10_nmm6v")
region_enabled = true
region_rect = Rect2(320, 227.997, 16.0054, 28.0105)

[node name="StaticBody2D" type="StaticBody2D" parent="Fridge"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fridge/StaticBody2D"]
shape = SubResource("RectangleShape2D_wjvut")

[node name="Area2D" type="Area2D" parent="Fridge"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fridge/Area2D"]
position = Vector2(0.5, 0.25)
shape = SubResource("RectangleShape2D_nmm6v")

[node name="PlateDrawer" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(-1103, -806)
scale = Vector2(4, 4)
texture = ExtResource("10_nmm6v")
region_enabled = true
region_rect = Rect2(337.995, 144.948, 27.9974, 31.1347)

[node name="StaticBody2D" type="StaticBody2D" parent="PlateDrawer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlateDrawer/StaticBody2D"]
shape = SubResource("RectangleShape2D_cacqj")

[node name="Area2D" type="Area2D" parent="PlateDrawer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlateDrawer/Area2D"]
position = Vector2(-0.375, 1.25)
shape = SubResource("RectangleShape2D_5o8ud")
